# sluuz

./: Cargo.toml  README.md
legacy/: checkpassesold.sh  git_passwordcheck.sh  git_search.sh
src/: git.rs  history.rs  main.rs
src/commands/: branches.rs  fetch.rs  mod.rs  scan.rs  search.rs  status.rs
